# OpenManusZero

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUGGING.md  README.md  mcp.md  openmanus_rust_rewrite_prompt.md  pending_tasks.md  rust-toolchain.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: agent_bench.rs
config/: mcp.example.json
docs/: architecture.md
docs/plans/: 2026-02-21-llm-client-design.md  2026-02-21-str-replace-editor-impl.md  2026-02-22-swe-agent-design.md  2026-02-22-swe-agent-impl.md  2026-02-22-web-search-impl.md
examples/: mcp_agent.rs  mcp_client.rs  mcp_server.rs
openmanus-rs/: Cargo.toml  pending_tasks.md
openmanus-rs/docs/plans/: 2026-02-21-str-replace-editor-design.md  2026-02-21-str-replace-editor-impl.md  2026-02-22-swe-agent-impl.md  2026-02-22-web-search-design.md  2026-02-22-web-search-impl.md
openmanus-rs/src/agent/: mod.rs  swe.rs
openmanus-rs/src/tool/: collection.rs  mod.rs  str_replace_editor.rs
openmanus-rs/src/tool/web_search/: duckduckgo.rs  fetcher.rs  mod.rs  tool.rs
scripts/: release.sh
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
src/agent/: base.rs  browser.rs  data_analysis.rs  manus.rs  mcp.rs  mod.rs  react.rs  sandbox_agent.rs  swe.rs  toolcall.rs
src/context/: context.rs  memory.rs  mod.rs
src/flow/: base.rs  factory.rs  mod.rs  planning.rs
src/llm/: bedrock.rs  client.rs  mod.rs  token.rs  types.rs
src/mcp/: client.rs  mod.rs  server.rs  tool_adapter.rs  types.rs
src/prompt/: browser.rs  data_analysis.rs  library.rs  manus.rs  mcp.rs  mod.rs  planning.rs  swe.rs  template.rs
src/protocol/: mod.rs
src/protocol/a2a/: agent_adapter.rs  jsonrpc.rs  mod.rs  server.rs  types.rs
src/sandbox/: daytona.rs  docker.rs  local.rs  manager.rs  mod.rs  wasm.rs
src/tool/: ask_human.rs  base.rs  bash.rs  chart.rs  chat_completion.rs  collection.rs  computer_use.rs  crawl.rs  file_ops.rs  mcp_tool.rs  mod.rs  planning.rs  python.rs  sandbox_tool.rs  terminate.rs
src/tool/browser/: browser_tool.rs  mod.rs
src/tool/search/: baidu.rs  base.rs  bing.rs  google.rs  mod.rs  tool.rs
src/tool/web_search/: engine.rs  tool.rs
tests/: agent_e2e.rs  llm_integration.rs  mcp_integration.rs  property_tests.rs
